--- a/_data/schedules.yml
+++ b/_data/schedules.yml
@@ -1,7 +1,7 @@
 - date: 2014-09-20
   class_name: 「100聞は1動画にしかず」講座
   href: http://peatix.com/event/47408
-  status: 満員
+  status: 終了
 - date: 2014-09-15
   class_name: Life Language Bootcamp Orientation #1
   href: http://llbootcamp.com/
