--- a/_data/schedules.yml
+++ b/_data/schedules.yml
@@ -1,8 +1,19 @@
 - date: 2014-09-20
   class_name: 「100聞は1動画にしかず」講座
   href: http://peatix.com/event/47408
-  status: 終了
+  done?: true
+
 - date: 2014-09-15
   class_name: Life Language Bootcamp Orientation #1
   href: http://llbootcamp.com/
-  status: 終了
+  done?: true
+
+- date: 2014-11-10
+  class_name: 「100聞は1動画にしかず」講座 (3時間)
+  href: https://www.facebook.com/events/1531663463744321/
+  done?: false
+
+- date: 2014-11-11
+  class_name: 「100聞は1動画にしかず」講座 (3時間)
+  href: https://www.facebook.com/events/1518386835096226/
+  done?: false
