--- a/_data/schedules.yml
+++ b/_data/schedules.yml
@@ -43,5 +43,5 @@
 - date: 2014-12-19
   class_name: 「100聞は1動画にしかず」講座 (3時間)
   href: http://peatix.com/event/64930
-  done?: false
+  done?: true
   full?: false
